--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=semDB
-#Readonly Mode
+
 readonly = false
+expiration = 1209600
+update = 5000
